@@ -15,6 +15,8 @@ Changes since version 0.80.0:
 - Fixed Legal Panel not to display rectangles in place of new lines.
 - Fixed problem with losing focus when changing to an empty workspace and back.
 - Fixed another focus related problem when changing workspaces.
+- Fixed problem with saving session when shared appicon is enabled (not
+  all instances were saved in the session, only one per shared appicon)
 
 
 Changes since version 0.70.0:
